--- a/hw1/hwa1.ipynb
+++ b/hw1/hwa1.ipynb
@@ -10,7 +10,7 @@
      "grade": false,
      "grade_id": "cell-35def0d0f4b47a0a",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -49,7 +49,7 @@
      "grade": false,
      "grade_id": "cell-5ed0076cec86f623",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -97,7 +97,7 @@
      "grade": false,
      "grade_id": "cell-916f46de8cde2ca7",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -120,7 +120,7 @@
      "grade": false,
      "grade_id": "cell-9ef8b2769c2c1949",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -141,7 +141,7 @@
      "grade": false,
      "grade_id": "cell-6966afc155aa6616",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -160,8 +160,8 @@
      "grade": true,
      "grade_id": "cell-5b9d27f913f08c27",
      "locked": false,
-     "points": 1.0,
-     "schema_version": 1.0,
+     "points": 1,
+     "schema_version": 1,
      "solution": true
     }
    },
@@ -508,7 +508,7 @@
        "[10 rows x 21 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -530,8 +530,8 @@
      "grade": true,
      "grade_id": "cell-5bd0d6844b64ea1a",
      "locked": false,
-     "points": 1.0,
-     "schema_version": 1.0,
+     "points": 1,
+     "schema_version": 1,
      "solution": true
     }
    },
@@ -599,7 +599,7 @@
      "grade": false,
      "grade_id": "cell-9b9bd1b387905904",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -617,8 +617,8 @@
      "grade": true,
      "grade_id": "cell-c7cd243e8b5fe5aa",
      "locked": false,
-     "points": 1.0,
-     "schema_version": 1.0,
+     "points": 1,
+     "schema_version": 1,
      "solution": true
     }
    },
@@ -642,7 +642,7 @@
      "grade": false,
      "grade_id": "cell-508e7e1a13f9bbe4",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -656,7 +656,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -664,8 +664,8 @@
      "grade": true,
      "grade_id": "cell-9bb6a28b6b6932fa",
      "locked": false,
-     "points": 5.0,
-     "schema_version": 1.0,
+     "points": 5,
+     "schema_version": 1,
      "solution": true
     }
    },
@@ -685,7 +685,7 @@
      "grade": false,
      "grade_id": "cell-0c168d036748663e",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -696,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 20,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -705,7 +705,7 @@
      "grade": false,
      "grade_id": "cell-cbad8871e083093f",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -740,7 +740,7 @@
      "grade": false,
      "grade_id": "cell-c50f0a0e569142ed",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -758,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 25,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -766,12 +766,25 @@
      "grade": true,
      "grade_id": "cell-44853962dc1651df",
      "locked": false,
-     "points": 2.0,
-     "schema_version": 1.0,
+     "points": 2,
+     "schema_version": 1,
      "solution": true
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "could not broadcast input array from shape (21613,2) into shape (21613)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-25-73d5506c53f7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# YOUR CODE HERE\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmatrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mones\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mX\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mX\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mX\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtranspose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\Anaconda3\\lib\\site-packages\\numpy\\matrixlib\\defmatrix.py\u001b[0m in \u001b[0;36m__new__\u001b[1;34m(subtype, data, dtype, copy)\u001b[0m\n\u001b[0;32m    140\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    141\u001b[0m         \u001b[1;31m# now convert data to an array\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 142\u001b[1;33m         \u001b[0marr\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mN\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mdtype\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcopy\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    143\u001b[0m         \u001b[0mndim\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mndim\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    144\u001b[0m         \u001b[0mshape\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0marr\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mValueError\u001b[0m: could not broadcast input array from shape (21613,2) into shape (21613)"
+     ]
+    }
+   ],
    "source": [
     "# YOUR CODE HERE\n",
     "X = np.matrix([np.ones(len(X)), X])\n",
@@ -788,7 +801,7 @@
      "grade": false,
      "grade_id": "cell-c7d7fd68c1b24943",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -835,7 +848,7 @@
      "grade": false,
      "grade_id": "cell-0f83af93c0436542",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -845,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 42,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -854,7 +867,7 @@
      "grade": false,
      "grade_id": "cell-4c1cfec24e144479",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -863,7 +876,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.506082338135848\n",
       "✓\n"
      ]
     }
@@ -877,7 +889,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -894,7 +906,7 @@
      "grade": false,
      "grade_id": "cell-afdc527b73d275bb",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -913,7 +925,7 @@
      "grade": false,
      "grade_id": "cell-59b95cbea13e7fc1",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -947,7 +959,7 @@
      "grade": false,
      "grade_id": "cell-86125cd57f0fdb89",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -966,7 +978,7 @@
      "grade": false,
      "grade_id": "cell-a565f1f721f6377f",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -990,7 +1002,7 @@
      "grade": false,
      "grade_id": "cell-3bdd058ecc5db0eb",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1009,7 +1021,7 @@
      "grade": false,
      "grade_id": "cell-ee89ac06af3087ae",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1049,7 +1061,7 @@
      "grade": false,
      "grade_id": "cell-639b53fc41479335",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1075,7 +1087,7 @@
      "grade": false,
      "grade_id": "cell-5043aa5363cbe5c9",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1102,7 +1114,7 @@
      "grade": false,
      "grade_id": "cell-6e2524d07523d950",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1121,7 +1133,7 @@
      "grade": false,
      "grade_id": "cell-a8b088fe7a10910a",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1140,7 +1152,7 @@
      "grade": false,
      "grade_id": "cell-5bd93130c022d3e1",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1158,7 +1170,7 @@
      "grade": false,
      "grade_id": "cell-4f81cf375ac46b73",
      "locked": false,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": true
     }
    },
@@ -1179,7 +1191,7 @@
      "grade": false,
      "grade_id": "cell-d16367ecb7183996",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1197,8 +1209,8 @@
      "grade": true,
      "grade_id": "cell-448638e817503ca3",
      "locked": false,
-     "points": 0.0,
-     "schema_version": 1.0,
+     "points": 0,
+     "schema_version": 1,
      "solution": true
     }
    },
@@ -1218,7 +1230,7 @@
      "grade": false,
      "grade_id": "cell-b73893d236bff1d5",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1237,7 +1249,7 @@
      "grade": false,
      "grade_id": "cell-c7ee7d8763464371",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1263,7 +1275,7 @@
      "grade": false,
      "grade_id": "cell-e77c602466fab37d",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1291,7 +1303,7 @@
      "grade": false,
      "grade_id": "cell-15626dda8db26550",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1312,7 +1324,7 @@
      "grade": false,
      "grade_id": "cell-2dc0f4dc3491520c",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1332,8 +1344,8 @@
      "grade": true,
      "grade_id": "cell-a87b4027bd3bda4b",
      "locked": false,
-     "points": 0.0,
-     "schema_version": 1.0,
+     "points": 0,
+     "schema_version": 1,
      "solution": true
     }
    },
@@ -1355,7 +1367,7 @@
      "grade": false,
      "grade_id": "cell-1aa12f54513b1efa",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1374,7 +1386,7 @@
      "grade": false,
      "grade_id": "cell-f40a9df530db9399",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1402,7 +1414,7 @@
      "grade": false,
      "grade_id": "cell-0c68216a26a9b5af",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1432,7 +1444,7 @@
      "grade": false,
      "grade_id": "cell-70fcd47d69caea00",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1450,8 +1462,8 @@
      "grade": true,
      "grade_id": "cell-2985911f4b7af3e1",
      "locked": false,
-     "points": 0.0,
-     "schema_version": 1.0,
+     "points": 0,
+     "schema_version": 1,
      "solution": true
     }
    },
@@ -1471,7 +1483,7 @@
      "grade": false,
      "grade_id": "cell-2b89288ff61c80ac",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1490,7 +1502,7 @@
      "grade": false,
      "grade_id": "cell-81ab741781b2f6ec",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1524,7 +1536,7 @@
      "grade": false,
      "grade_id": "cell-6f25fb05bd6c648a",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1549,7 +1561,7 @@
      "grade": false,
      "grade_id": "cell-827d1de1293be51f",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1580,7 +1592,7 @@
      "grade": false,
      "grade_id": "cell-4fa207b72d2445c2",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1606,7 +1618,7 @@
      "grade": false,
      "grade_id": "cell-cad652570cee3629",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1627,7 +1639,7 @@
      "grade": false,
      "grade_id": "cell-0800ea03f680996e",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1648,7 +1660,7 @@
      "grade": false,
      "grade_id": "cell-5bf66bfd62450001",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1667,7 +1679,7 @@
      "grade": false,
      "grade_id": "cell-64bf74a89ba3a0b2",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
@@ -1687,7 +1699,7 @@
      "grade": false,
      "grade_id": "cell-01736fab76114323",
      "locked": true,
-     "schema_version": 1.0,
+     "schema_version": 1,
      "solution": false
     }
    },
