--- a/hw2/hwa2.ipynb
+++ b/hw2/hwa2.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 71,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -44,7 +44,16 @@
      "solution": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -76,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,16 +100,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[<__main__.Node at 0x1dbe97843c8>, <__main__.Node at 0x1dbe9784128>]"
+       "[<__main__.Node at 0x2c62918b2e8>, <__main__.Node at 0x2c624133ba8>]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 73,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 74,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -174,7 +183,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -220,9 +229,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 87,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "build_tree() missing 1 required positional argument: 'chi_value'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-87-8e0f797a03cb>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# python support passing a function as arguments to another function.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mtree_gini\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbuild_tree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimpurity\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcalc_gini\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[0mtree_entropy\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mbuild_tree\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mX_train\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mimpurity\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mcalc_entropy\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: build_tree() missing 1 required positional argument: 'chi_value'"
+     ]
+    }
+   ],
    "source": [
     "# python support passing a function as arguments to another function.\n",
     "tree_gini = build_tree(data=X_train, impurity=calc_gini) \n",
@@ -242,11 +263,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accurate predictions: 133.0 out of 143\n",
+      "Accurate predictions: 133.0 out of 143\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.9300699300699301"
+      ]
+     },
+     "execution_count": 77,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#### Your code here ####"
+    "#### Your code here ####\n",
+    "calc_accuracy(tree_gini, X_test)\n",
+    "calc_accuracy(tree_entropy, X_test)"
    ]
   },
   {
@@ -262,16 +304,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 89,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pre-pruned 10.70489844683393\n",
+      "Pre-pruned 10.70489844683393\n",
+      "Pre-pruned 10.70489844683393\n",
+      "Pre-pruned 10.70489844683393\n"
+     ]
+    }
+   ],
    "source": [
     "training = []\n",
     "testing  = []\n",
     "\n",
     "#### Your code here ####\n",
     "for chi_value in [1, 0.01, 0.005, 0.001, 0.0005, 0.0001, 0.00001]:\n",
-    "    pass"
+    "    tree = build_tree(X_train, calc_gini, chi_value)"
    ]
   },
   {
@@ -337,12 +390,65 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[X22 <= 117.4]\n",
+      "  [X27 <= 0.1884]\n",
+      "    [X28 <= 0.4326]\n",
+      "      [X12 <= 5.223]\n",
+      "        leaf: [1.0: 279]\n",
+      "        leaf: [0.0: 1]\n",
+      "      leaf: [0.0: 2]\n",
+      "    leaf: [0.0: 9]\n",
+      "  [X8 <= 0.1264]\n",
+      "    leaf: [1.0: 1]\n",
+      "    leaf: [0.0: 134]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#### Your code here ####\n",
+    "print_tree(tree_gini)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[X22 <= 117.4]\n",
+      "  [X27 <= 0.1884]\n",
+      "    [X28 <= 0.4326]\n",
+      "      [X12 <= 5.223]\n",
+      "        leaf: [1.0: 279]\n",
+      "        leaf: [0.0: 1]\n",
+      "      leaf: [0.0: 2]\n",
+      "    leaf: [0.0: 9]\n",
+      "  [X8 <= 0.1264]\n",
+      "    leaf: [1.0: 1]\n",
+      "    leaf: [0.0: 134]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_tree(tree_entropy)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#### Your code here ####"
-   ]
+   "source": []
   }
  ],
  "metadata": {
